broke headings into more components for sidebar

--- a/components/index.html
+++ b/components/index.html
@@ -14,7 +14,10 @@
 		<article class="sidebar_section">
 			<h3 class="sidebar_heading">Typography Defaults</h3>
 				<h5><a class="sidebar_item" href="#anchor_body">body</a></h5>
-				<h5><a class="sidebar_item" href="#anchor_headings">headings</a></h5>
+				<h5><a class="sidebar_item" href="#anchor_h1">h1</a></h5>
+				<h5><a class="sidebar_item" href="#anchor_h2">h2</a></h5>
+				<h5><a class="sidebar_item" href="#anchor_h3">h3</a></h5>
+				<h5><a class="sidebar_item" href="#anchor_h4">h4</a></h5>
 				<h5><a class="sidebar_item" href="#anchor_nav-menu">nav menu</a></h5>
 		</article>
 		<article class="sidebar_section">
@@ -55,24 +58,53 @@
 			</article>
 
 			<article class="component">
-				<h3 id="anchor_headings" class="component__name">headings (h1, h2, h3)</h3>
+				<h3 id="anchor_h1" class="component__name">h1</h3>
 				<div class="component__img">
 					<img 
 						srcset="img/main_heading@2x.png 2x"
 						src="img/main_heading@2x.png" 
 						alt="h1"/>
+				</div>
+				<div class="component__code">
+					<h1>The best art museums in barcelona in one pass</h1>
+				</div>
+			</article>
+						
+			<article class="component">
+				<h3 id="anchor_h2" class="component__name">h2</h3>
+				<div class="component__img">
 					<img 
 						srcset="img/section__heading@2x.png 2x"
 						src="img/section__heading@2x.png" 
 						alt="h2"/>
+				</div>
+				<div class="component__code">
+					<h2>Museums Included</h2>
+				</div>
+			</article>
+
+			<article class="component">
+				<h3 id="anchor_h3" class="component__name">h3</h3>
+				<div class="component__img">
 					<img 
 						srcset="img/museum-card__title@2x.png 2x"
 						src="img/museum-card__title@2x.png" 
 						alt="h3"/>
 				</div>
 				<div class="component__code">
-					<h1>The best art museums in barcelona in one pass</h1>
-					<h2>Museums Included</h2>
+					<h3>Fundació Antoni Tàpies</h3>
+				</div>
+			</article>
+
+			<article class="component">
+				<h3 id="anchor_h4" class="component__name">h4</h3>
+				<div class="component__img">
+					<img 
+						srcset="img/how__card--stepheader@2x.png 2x"
+						src="img/how__card--stepheader@2x.png" 
+						alt="h4"/>
+				</div>
+				<div class="component__code">
 					<h3>Fundació Antoni Tàpies</h3>
 				</div>
 			</article>
@@ -86,7 +118,7 @@
 						alt="nav-bar menu item"/>
 				</div>
 				<div class="component__code">
-					<a class="nav nav-menu" href="#!">Museums</a>
+					<h4>Purchase your Articket in just a few clicks</h4>
 				</div>
 			</article>
 		</section>
@@ -309,7 +341,7 @@
 				</article>
 
 				<article class="component">
-					<h3 id="anchor_faq-card" class="component__name">museum card</h3>
+					<h3 id="anchor_faq-card" class="component__name">faq card</h3>
 					<div class="component__img">
 						<img 
 							srcset="img/section__faq--card@2x.png 1.5x"
@@ -323,5 +355,6 @@
 				</article>
 		</section>
 	</div>
+
 </body>
 </html>
