--- a/components/index.html
+++ b/components/index.html
@@ -105,7 +105,7 @@
 						alt="h4"/>
 				</div>
 				<div class="component__code">
-					<h3>Fundació Antoni Tàpies</h3>
+					<h4>Purchase your Articket in just a few clicks</h4>
 				</div>
 			</article>
 
@@ -118,7 +118,7 @@
 						alt="nav-bar menu item"/>
 				</div>
 				<div class="component__code">
-					<h4>Purchase your Articket in just a few clicks</h4>
+					<a class="nav">Museums</a>
 				</div>
 			</article>
 		</section>
