added footer column

--- a/components/index.html
+++ b/components/index.html
@@ -37,6 +37,10 @@
 				<h5><a class="sidebar_item" href="#anchor_promotion-card">promotion card</a></h5>
 				<h5><a class="sidebar_item" href="#anchor_faq-card">faq card</a></h5>
 		</article>
+		<article class="sidebar_section">
+			<h3 class="sidebar_heading">footer</h3>
+				<h5><a class="sidebar_item" href="#anchor_footer">footer column</a></h5>
+		</article>
 	</div>
 
 	<div class="main">
@@ -354,7 +358,35 @@
 					</div>
 				</article>
 		</section>
+<!--footer-->
+		<section class ="component_section">
+		<h2>header</h2>
+			<article class="component">
+				<h3 id="anchor_footer" class="component__name">footer</h3>
+				<div class="component__img">
+					<img 
+						srcset="img/footer__menu1@2x.png 2x"
+						src="img/footer__menu1@2x.png" 
+						alt="footer"/>
+				</div>
+				<div class="component__code">
+				<div class="footer">
+					<div class="footer-col1">
+						<img 
+						class="logo--footer"
+						srcset="../img/logo-white.svg 1.5x"
+						src="../img/logo-white.svg" 
+						alt="logo">
+						<ul class="footer-menu">
+							<li><a href="#!" class="footer-menu__item">Privacy Policy</a></li>
+							<li><a href="#!" class="footer-menu__item">Legal notice</a></li>
+							<li><a href="#!" class="footer-menu__item">Cookies policy</a></li>
+						</ul>
+					</div>
+				</div>
+				</div>
+			</article>
+		</section>
 	</div>
-
 </body>
 </html>
