--- a/components/index.html
+++ b/components/index.html
@@ -362,7 +362,7 @@
 		<section class ="component_section">
 		<h2>header</h2>
 			<article class="component">
-				<h3 id="anchor_footer" class="component__name">footer</h3>
+				<h3 id="anchor_footer-menu" class="component__name">footer menu</h3>
 				<div class="component__img">
 					<img 
 						srcset="img/footer__menu1@2x.png 2x"
@@ -373,7 +373,7 @@
 				<div class="footer">
 					<div class="footer-col1">
 						<img 
-						class="logo--footer"
+						class="footer-logo"
 						srcset="../img/logo-white.svg 1.5x"
 						src="../img/logo-white.svg" 
 						alt="logo">
@@ -381,6 +381,60 @@
 							<li><a href="#!" class="footer-menu__item">Privacy Policy</a></li>
 							<li><a href="#!" class="footer-menu__item">Legal notice</a></li>
 							<li><a href="#!" class="footer-menu__item">Cookies policy</a></li>
+						</ul>
+					</div>
+				</div>
+				</div>
+			</article>
+
+			<article class="component">
+				<h3 id="anchor_footer" class="component__name">footer</h3>
+				<div class="component__img">
+					<img 
+						srcset="img/footer@2x.png 2x"
+						src="img/footer@2x.png" 
+						alt="footer"/>
+				</div>
+				<div class="component__code">
+				<div class="footer">
+					<div class="footer-col1">
+						<ul class="footer-menu">
+							<li><img 
+									class="footer-logo"
+									srcset="../img/logo-white.svg 1.5x"
+									src="../img/logo-white.svg" 
+									alt="logo"></li>
+							<li><a href="#!" class="footer-menu__item">Privacy Policy</a></li>
+							<li><a href="#!" class="footer-menu__item">Legal notice</a></li>
+							<li><a href="#!" class="footer-menu__item">Cookies policy</a></li>
+						</ul>
+					</div>
+					<div class="footer-col2">
+						<ul class="footer-menu">
+							<li><a href="#!" class="footer-menu__item">Museu Nacional</a></li>
+							<li><a href="#!" class="footer-menu__item">Museu Picasso</a></li>
+							<li><a href="#!" class="footer-menu__item">MACBA</a></li>
+							<li><a href="#!" class="footer-menu__item">CCCB</a></li>
+							<li><a href="#!" class="footer-menu__item">Fundació Joan Miró</a></li>
+							<li><a href="#!" class="footer-menu__item">Fundació Antoni Tapies</a></li>
+						</ul>
+					</div>
+					<div class="footer-col3">
+						<ul class="footer-menu">
+							<li><a href="#!" class="footer-menu__item">How it works</a></li>
+							<li><a href="#!" class="footer-menu__item">Barcelona Routes</a></li>
+							<li><a href="#!" class="footer-menu__item">F.A.Q.</a></li>
+						</ul>
+					</div>
+					<div class="footer-col4">
+						<ul class="footer-menu">
+							<li><a href="#!" class="footer-menu__item">Buy safely</a></li>
+							<li><img 
+								class="footer-icon"
+								srcset="../img/secure-1.svg 2x"
+								src="../img/secure-1.svg" 
+								alt="secure payments"
+								></li>
 						</ul>
 					</div>
 				</div>
