--- a/css/main.css
+++ b/css/main.css
@@ -34,6 +34,7 @@ html {
 	overflow-x: auto;
 	padding: 0 1rem;
 }
+
 /* TYPOGRAPHY DEFAULTS */
 	body {
 		font-family: var(--proxima);
@@ -56,6 +57,7 @@ html {
 		font-size: 42px;
 		line-height: 48px;
 		letter-spacing: 15px;
+		text-align: center;
 	}
 
 	h3 {
@@ -354,16 +356,19 @@ html {
 		align-items: center;
 	}
 
-	.museums__grid {
+	.museums {
+		padding: 3rem;
+	}
+
+	.museum__grid {
 		display: flex;
 		flex-wrap: wrap;
 		justify-content: space-between;
 	}
 
 	.museum__card {
-		margin: 0 0 2rem;
-		flex-basis: 48%;
-		max-width: 400px;
+		margin: 0 0 3.5%;
+    	flex-basis: 30%;
 	}
 
 	.museum__img {
