--- a/css/main.css
+++ b/css/main.css
@@ -435,3 +435,39 @@ html {
 		line-height: 1.3em;
 		margin: 0;
 	}
+
+	.faq__grid {
+		display: flex;
+		flex-wrap: wrap;
+		justify-content: space-between;
+	}
+
+	.faq__article {
+		margin: 0 0 3.5%;
+    	flex-basis: 30%;
+	}
+
+	/* FOOTER */
+	.footer-socials {
+		display: flex;
+		justify-content: space-between;
+		align-items: center;
+	}
+
+	.fa {
+	  padding: 10px 0px;
+	  border-radius: 50%;
+	  width: 40px;
+	  text-align: center;
+	  border: 2px solid #fff;
+	  color: #fff;
+	}
+
+	.fa:hover {
+	    background: #fff;
+	    color: #e63338;
+	}
+
+	.copyright {
+		align-self: flex-end;
+	}
