--- a/css/main.css
+++ b/css/main.css
@@ -243,6 +243,23 @@ html {
 		text-transform: uppercase;
 	}
 
+	.t--1 {
+		font-size: 1.2em;
+		text-align: center;
+	}
+
+	.price {
+		font-size: 30px;
+		font-weight: 700;
+		letter-spacing: 4px;
+		line-height: 0;
+	}
+
+	.price--real {
+		color: var(--red);
+		text-decoration: line-through solid var(--red);
+	}
+
 	.museum__name, .museum__summary {
 		padding: 0 .5rem;
 	}
