--- a/css/main.css
+++ b/css/main.css
@@ -145,10 +145,10 @@ html {
 	}
 
 	@media screen and (min-width: 320px) {
-	  		.featured__heading { 
+	  	.featured__heading { 
 	  			font-size: calc(24px + 18 * ((100vw - 320px) / 680));
-	  		}
-		}
+  		}
+	}
 	@media screen and (min-width: 1300px) {
 	  .featured__heading {
 	    font-size: 65px;
@@ -427,8 +427,8 @@ html {
 
 	.museum__card {
 		margin: 0 0 3.5%;
-    	flex-basis: 25%;
-    	flex-shrink: 1;
+    	flex: 1 1 25%;
+    	max-width: 380px;
 	}
 
 	.museum__img {
@@ -459,6 +459,11 @@ html {
 	}
 
 /* HOW IT WORKS */
+
+	.how {
+		width: 84%;
+		margin: 1rem auto;
+	}
 	.how__grid {
 		display: flex;
 		justify-content: space-between;
@@ -485,11 +490,15 @@ html {
 /* PROMOTION TICKET */
 
 	.promotion {
-		margin: 5rem auto;
+		margin: 10rem auto;
+		width: 84%;
 	}
 
 /* FAQ */
 
+	.faq {
+		padding: 0 2rem;
+	}
 	.faq__top {
 		display: flex;
 		justify-content: space-between;
@@ -507,11 +516,13 @@ html {
 		display: flex;
 		flex-wrap: wrap;
 		justify-content: space-between;
+		gap: 2rem;
 	}
 
 	.faq__article {
 		margin: 0 0 3.5%;
-    	flex-basis: 30%;
+		min-width: 250px;
+    	flex: 1 1 30%;
 	}
 
 /* FOOTER */
