promotion card polishing, pre re-name

--- a/components/index.html
+++ b/components/index.html
@@ -6,6 +6,7 @@
 	<title>Components | Articket Barcelona</title>
 	<link rel="stylesheet" href="https://use.typekit.net/hgr0xdu.css">
 	<link rel="stylesheet" href="../css/main.css">
+	<link href="css/normalize.css" rel="stylesheet" />
 </head>
 <body>
 <!--sidebar-->
@@ -328,16 +329,16 @@
 							alt="promotion card"/>
 					</div>
 					<div class="component__code">
-						<div class="promotioncard">
-							<div class="promotion--left">
+						<div class="promotioncard2">
+							<div class="promotion--top">
 								<div class="promotion--header"><h2 class="promotion--header1">+100.000 artickets sold</h2><h2 class="promotion--header2">get yours!</h2></div>
-								<p class="promotion--subheader">save up to 45% with articket</p>
-							</div>
-							<div class="promotion--right">
 								<img 
 									src="../img/seal.png" 
 									srcset="../img/seal.png 2x"
 									alt="">
+							</div>
+							<div class="promotion--bottom">
+								<p class="promotion--subheader">save up to 45% with articket</p>
 								<a class="purchasebutton purchasebutton--promotion" href="#!">buy your articket</a>
 							</div>
 						</div>
