--- a/css/main.css
+++ b/css/main.css
@@ -138,13 +138,16 @@ html {
 		border: 1px solid var(--gray);
 	}
 
-/* SECTION DEFAULTS */
 	.header {
 		display: flex;
 		align-items: center;
 		justify-content: space-between;
 		background-color: var(--cream);
 		padding: 1rem;
+	}
+
+/* SECTION DEFAULTS */
+	.header--fixed {
 		position: fixed;
 		top: 0;
 		width: 100%;
@@ -434,13 +437,9 @@ html {
 
 /* PROMOTION TICKET */
 
-	.promotion {
+	.promotioncard {
 		margin: 10rem auto;
 		width: 84%;
-	}
-
-	.promotioncard2 {
-		margin: 3rem;
 		padding: 2rem;
 		box-shadow: -20px -20px var(--red);
 		border: 3px solid var(--red);
@@ -462,7 +461,7 @@ html {
 		gap: 2rem;
 	}
 
-	.promotion--header1 {
+	.promotion--header {
 		font-size: 40px;
 		font-weight: 700;
 		letter-spacing: 4px;
