--- a/css/main.css
+++ b/css/main.css
@@ -461,7 +461,7 @@ html {
 		gap: 2rem;
 	}
 
-	.promotion--header {
+	.promotion--header1 {
 		font-size: 40px;
 		font-weight: 700;
 		letter-spacing: 4px;
