--- a/components/index.html
+++ b/components/index.html
@@ -97,7 +97,7 @@
 						alt="h3"/>
 				</div>
 				<div class="component__code">
-					<h3>Fundació Antoni Tàpies</h3>
+					<h3>Fundacio Antoni Tapies</h3>
 				</div>
 			</article>
 
@@ -252,10 +252,11 @@
 					<div class="component__code">
 						<ul class="featured_icons">
 							<li class="icon__card">
+							<li class="icon__card">
 								<div class="i"><img src="../img/icon-clock.svg" alt=""></div>
-								<div class="t"><p class="t">Skip</p>
-								<p class="t">the line</p>
+								<div class="t"><p class="t">Skip<br>the line</p>
 								</div>
+							</li>
 							</li>
 						</ul>
 					</div>
