fixed final errors to validate

--- a/components/index.html
+++ b/components/index.html
@@ -252,11 +252,9 @@
 					<div class="component__code">
 						<ul class="featured_icons">
 							<li class="icon__card">
-							<li class="icon__card">
 								<div class="i"><img src="../img/icon-clock.svg" alt=""></div>
 								<div class="t"><p class="t">Skip<br>the line</p>
 								</div>
-							</li>
 							</li>
 						</ul>
 					</div>
@@ -276,7 +274,7 @@
 							src="img/museum-card__img@2x.png"
 							alt="fundacio antoni tapies">
 						<h3 class="museum__name">FUNDACIÓ ANTONI TÀPIES</h3>
-						<p class="museum__summary">The Fundació Antoni Tàpies was established to promote knowledge of modern art and houses one of the most complete public collections of Antoni Tàpies’ work.</p>
+						<p class="museum__summary">The Fundacio Antoni Tapies was established to promote knowledge of modern art and houses one of the most complete public collections of Antoni Tapies’ work.</p>
 					</div>
 				</article>
 
